feat: pl translation in api

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -86,3 +86,8 @@ deleted_wo=Deleted Work Order
 Created_At=Date created
 Downtime_Duration=Downtime Duration
 coming_wo=Coming Work Order
+MODERNIZATION=Modernization
+STANDBY=Standby
+INSPECTION_SCHEDULED=Inspection Scheduled
+COMMISSIONING=Commissioning
+EMERGENCY_SHUTDOWN=Emergency Shutdown
