--- a/api/src/main/resources/messages_es_ES.properties
+++ b/api/src/main/resources/messages_es_ES.properties
@@ -87,3 +87,8 @@ deleted_wo=Orden de trabajo eliminada
 Created_At=Fecha de creaci\u00F3n
 Downtime_Duration=Tiempo fuera de servicio
 coming_wo=Pr\u00F3xima orden de trabajo
+MODERNIZATION=Modernizaci\u00F3n
+STANDBY=En espera
+INSPECTION_SCHEDULED=Inspecci\u00F3n programada
+COMMISSIONING=Puesta en marcha
+EMERGENCY_SHUTDOWN=Apagado de emergencia
