--- a/api/src/main/resources/messages_fr_FR.properties
+++ b/api/src/main/resources/messages_fr_FR.properties
@@ -80,4 +80,14 @@ deleted_wo=Ordre de travail supprim\u00E9
 Created_At=Date de cr\u00E9ation
 Downtime_Duration=Dur\u00E9e d'arr\u00EAt
 coming_wo=Bon de travail \u00E0 venir
-
+MODERNIZATION=Modernisation
+STANDBY=En attente
+INSPECTION_SCHEDULED=Inspection planifi\u00E9e
+COMMISSIONING=Mise en service
+EMERGENCY_SHUTDOWN=Arr\u00EAt d'urgence
+request_approved=Demande de travail approuv\u00E9e
+request_rejected=Demande de travail rejet\u00E9e
+request_approved_description=La demande de travail "{0}" a \u00E9t\u00E9 approuv\u00E9e
+request_rejected_description=La demande de travail "{0}" a \u00E9t\u00E9 rejet\u00E9e
+request_approved_description_limited_admin={0} a approuv\u00E9 la demande de travail "{1}"
+request_rejected_description_limited_admin={0} a rejet\u00E9 la demande de travail "{1}"
