--- a/api/src/main/resources/messages_tr_TR.properties
+++ b/api/src/main/resources/messages_tr_TR.properties
@@ -80,3 +80,14 @@ deleted_wo=Silinen \u0130\u015F Emri
 Created_At=Tarih olu\u015Fturuldu
 Downtime_Duration=Kesinti S\u00FCresi
 coming_wo=Gelen \u0130\u015F Emri
+MODERNIZATION=Modernizasyon
+STANDBY=Beklemede
+INSPECTION_SCHEDULED=Denetim Planland\u0131
+COMMISSIONING=Devreye Alma
+EMERGENCY_SHUTDOWN=Acil Kapama
+request_approved=\u0130\u015F talebi onayland\u0131
+request_rejected=\u0130\u015F talebi reddedildi
+request_approved_description="{0}" i\u015F talebi onayland\u0131
+request_rejected_description="{0}" i\u015F talebi reddedildi
+request_approved_description_limited_admin={0}, "{1}" i\u015F talebini onaylad\u0131
+request_rejected_description_limited_admin={0}, "{1}" i\u015F talebini reddetti
