--- a/api/src/main/resources/mailMessages_es_ES.properties
+++ b/api/src/main/resources/mailMessages_es_ES.properties
@@ -4,7 +4,7 @@ signature=Firma
 happyToWelcome=Estamos felices de darle la bienvenida. Para comenzar, primero verifique su cuenta. Presione el bot\u00F3n de abajo.
 ifHaveQuestions=Si tiene alguna duda responda este e-mail.
 grashTeam=The Atlas Team
-needHelp=Necesita ayuda?
+needHelp=¿Necesita ayuda?
 hereToHelp=Estamos aqu\u00ED para ayudarte
 verifyAccount=Verificar cuenta
 signupHeader=\u00A1Estamos encantados de tenerte aqu\u00ED! Prep\u00E1rate para sumergirte en tu nueva cuenta.
@@ -12,18 +12,18 @@ inviteHeader=Has sido invitado a usar Atlas CMMS.
 inviteTitle=Invitaci\u00F3n a usar Atlas CMMS.
 inviteMessage={0} Te ha invitado a unirte a la compa\u00F1\u00EDa {1} en Atlas.
 joinCompany=Unirse a la compa\u00F1\u00EDa
-newWorkOrderHeader=Nueva orden de trabajo asignada a ti
-newWorkOrder=Nueva orden de trabajo
-newWorkOrderMessage=Has sido asignado a esta orden de trabajo: {0}
+newWorkOrderHeader=Se te ha asignado una nueva Orden de Trabajo
+newWorkOrder=Nueva Orden de Trabajo
+newWorkOrderMessage=Has sido asignado a esta Orden de Trabajo: {0}
 seeDetails=Ver m\u00E1s detalles
-requestUpdateHeader=Se ha actualizado una orden de trabajo que usted solicito
+requestUpdateHeader=Se ha actualizado una Orden de Trabajo que usted solicito
 requestUpdate=Actualizar solicitud
 newPurchaseOrderHeader=Nueva orden de compra
 newPurchaseOrder=Nueva orden de compra
 resetPwdHeader=Nueva contrase\u00F1a de Atlas
-resetPwdMessage=Tu contrase\u00F1a ha sido resta lecida. Por favor, logueate nuevamente utilizando esta contrase\u00F1a: {0}. Por razones de seguridad, es importante que cambies tu contrase\u00F1a tan pronto te sea posible
+resetPwdMessage=Tu contrase\u00F1a ha sido restablecida. Por favor, inicia sesión nuevamente utilizando esta contrase\u00F1a: {0}. Por razones de seguridad, es importante que cambies tu contrase\u00F1a tan pronto te sea posible
 login=Iniciar sesi\u00F3n
-wo_number=Orden de trabajo #{0}
+wo_number=Orden de Trabajo #{0}
 format_date={0} d\u00EDas {1} horas {2} minutos
 created_at=Creado
 last_updated=\u00DAltima actualizaci\u00F3n
@@ -31,13 +31,13 @@ assigned_to=Asignado a
 due_date=Fecha l\u00EDmite
 status=Estado
 priority=Prioridad
-work_order=Orden de trabjo
+work_order=Orden de Trabajo
 details=Detalles
 location=Localizaci\u00F3n
 estimated_duration=Duraci\u00F3n estimada
 team=Equipo
 category=Categor\u00EDa
-customers=Clientw
+customers=Cliente
 completed_by=Completo por
 completed_on=Completado
 feedback=Comentarios
@@ -49,7 +49,7 @@ cost=Costo
 relations=Relaciones
 additional_costs=Costos adicionales
 history=Historial
-parts=Partes
+parts=Repuestos
 date=Fecha
 asset=Activo
 quantity=Cantidad
@@ -57,11 +57,11 @@ OPEN=Abierta
 IN_PROGRESS=En Progreso
 ON_HOLD=En espera
 COMPLETE=Completada
-NONE=Ninguno
-LOW=Bajo
-MEDIUM=Medio
-HIGH=Alto
-this_wo_created=Esta Orden de trabajo ha Sido creada con
+NONE=Ninguna
+LOW=Baja
+MEDIUM=Media
+HIGH=Alta
+this_wo_created=Esta Orden de Trabajo ha sido creada con
 DUPLICATE_OF=es un duplicado de
 RELATED_TO=est\u00E1 relacionado con
 SPLIT_FROM=se dividi\u00F3 de
@@ -72,8 +72,8 @@ newRequestMessage={0} cre\u00F3 una nueva solicitud: {1}
 approvedRequest=La solicitud "{0}" ha sido aprobada
 rejectedRequest=Solicitud de trabajo rechazada
 rejectedRequestMessage=La solicitud "{0}" ha sido rechazada
-deleted_wo=Orden de trabajo eliminada
+deleted_wo=Orden de Trabajo eliminada
 deleted_wo_message={1} orden de trabajo ha Sido eliminada"{0}"
-comingWorkOrderHeader=Pr\u00F3xima orden de trabajo asignada a usted
-coming_wo=Pr\u00F3xima orden de trabajo
-coming_wo_message=La orden de trabajo "{0}", asignada a usted se encuentra en preparaci\u00F3n
+comingWorkOrderHeader=Pr\u00F3xima Orden de Trabajo asignada a usted
+coming_wo=Pr\u00F3xima Orden de Trabajo
+coming_wo_message=La Orden de Trabajo "{0}", asignada a usted se encuentra en preparaci\u00F3n
