fix: missing translations

--- a/api/src/main/resources/mailMessages_es_ES.properties
+++ b/api/src/main/resources/mailMessages_es_ES.properties
@@ -4,7 +4,7 @@ signature=Firma
 happyToWelcome=Estamos felices de darle la bienvenida. Para comenzar, primero verifique su cuenta. Presione el bot\u00F3n de abajo.
 ifHaveQuestions=Si tiene alguna duda responda este e-mail.
 grashTeam=The Atlas Team
-needHelp=¿Necesita ayuda?
+needHelp=\u00BFNecesita ayuda?
 hereToHelp=Estamos aqu\u00ED para ayudarte
 verifyAccount=Verificar cuenta
 signupHeader=\u00A1Estamos encantados de tenerte aqu\u00ED! Prep\u00E1rate para sumergirte en tu nueva cuenta.
@@ -21,7 +21,7 @@ requestUpdate=Actualizar solicitud
 newPurchaseOrderHeader=Nueva orden de compra
 newPurchaseOrder=Nueva orden de compra
 resetPwdHeader=Nueva contrase\u00F1a de Atlas
-resetPwdMessage=Tu contrase\u00F1a ha sido restablecida. Por favor, inicia sesión nuevamente utilizando esta contrase\u00F1a: {0}. Por razones de seguridad, es importante que cambies tu contrase\u00F1a tan pronto te sea posible
+resetPwdMessage=Hemos recibido una solicitud para restablecer su contrase\u00F1a. Por favor, haga clic en el enlace proporcionado para confirmar el restablecimiento. Una vez confirmado, su nueva contrase\u00F1a temporal ser\u00E1: <br><br>{0}<br><br>Por favor, aseg\u00FArese de cambiar esta contrase\u00F1a lo antes posible para la seguridad de su cuenta.
 login=Iniciar sesi\u00F3n
 wo_number=Orden de Trabajo #{0}
 format_date={0} d\u00EDas {1} horas {2} minutos
