--- a/api/src/main/resources/mailMessages_fr_FR.properties
+++ b/api/src/main/resources/mailMessages_fr_FR.properties
@@ -23,7 +23,7 @@ requestUpdate=Mise \u00E0 jour sur une Demande
 newPurchaseOrderHeader=Nouveau bon de commande
 newPurchaseOrder=Nouveau bon de commande
 resetPwdHeader=Nouveau mot de passe
-resetPwdMessage=Votre mot de passe a \u00E9t\u00E9 r\u00E9initialis\u00E9. Veuillez vous reconnecter en utilisant ce mot de passe: {0}. Il est important de changer votre mot de passe d\u00E8s que possible pour des raisons de s\u00E9curit\u00E9.
+resetPwdMessage=Nous avons re\u00E7u une demande de r\u00E9initialisation de votre mot de passe. Veuillez cliquer sur le lien fourni pour confirmer la r\u00E9initialisation. Une fois confirm\u00E9e, votre nouveau mot de passe temporaire sera : <br><br>{0}<br><br>Veuillez changer ce mot de passe d\u00E8s que possible pour assurer la s\u00E9curit\u00E9 de votre compte.
 login=Se connecter
 wo_number=Bon de Travail #{0}
 format_date={0} jours {1} heures {2} minutes
