--- a/api/src/main/resources/mailMessages_pl_PL.properties
+++ b/api/src/main/resources/mailMessages_pl_PL.properties
@@ -21,7 +21,7 @@ requestUpdate=Aktualizacja Zg\u0142oszenia
 newPurchaseOrderHeader=Nowe Zam\u00F3wienie
 newPurchaseOrder=Nowe Zam\u00F3wienie
 resetPwdHeader=Nowe has\u0142o do Atlas CMMS
-resetPwdMessage=Twoje has\u0142o zosta\u0142o zresetowane. Prosz\u0119 zaloguj si\u0119 u\u017Cywaj\u0105c tego has\u0142a: {0}. Ze wzegl\u0119d\u00F3w bezpiecze\u0144stwa, zmie\u0144 swoje has\u0142o jak najszybciej.
+resetPwdMessage=Otrzymali\u015Bmy pro\u015Bb\u0119 o zresetowanie Twojego has\u0142a. Kliknij w podany link, aby potwierdzi\u0107 resetowanie. Po potwierdzeniu Twoje nowe tymczasowe has\u0142o b\u0119dzie nast\u0119puj\u0105ce: <br><br>{0}<br><br>Prosimy o zmian\u0119 tego has\u0142a jak najszybciej w celu zapewnienia bezpiecze\u0144stwa konta.
 login=Zaloguj
 wo_number=Zadanie #{0}
 format_date={0} dni {1} godz. {2} min.
