--- a/api/src/main/resources/mailMessages_pt_BR.properties
+++ b/api/src/main/resources/mailMessages_pt_BR.properties
@@ -1,79 +1,79 @@
 welcome=Bem-vindo,
 regards=Atenciosamente,
 signature=Assinatura
-happyToWelcome=Estamos felizes em recebê-lo. Por favor, verifique primeiro sua conta. Clique no botão abaixo.
-ifHaveQuestions=Se tiver alguma dúvida, basta responder a este e-mail.
+happyToWelcome=Estamos felizes em receb\u00EA-lo. Por favor, verifique primeiro sua conta. Clique no bot\u00E3o abaixo.
+ifHaveQuestions=Se tiver alguma d\u00FAvida, basta responder a este e-mail.
 grashTeam=Equipe Atlas
 needHelp=Precisa de ajuda?
-hereToHelp=Estamos aqui para ajudá-lo
+hereToHelp=Estamos aqui para ajud\u00E1-lo
 verifyAccount=Verificar Conta
-signupHeader=Estamos felizes em tê-lo aqui! Prepare-se para mergulhar em sua nova conta.
-inviteHeader=Você foi convidado a usar o Atlas CMMS.
+signupHeader=Estamos felizes em t\u00EA-lo aqui! Prepare-se para mergulhar em sua nova conta.
+inviteHeader=Voc\u00EA foi convidado a usar o Atlas CMMS.
 inviteTitle=Convite para usar o Atlas CMMS.
-inviteMessage={0} convidou você para se juntar à empresa {1} no Atlas.
+inviteMessage={0} convidou voc\u00EA para se juntar \u00E0 empresa {1} no Atlas.
 joinCompany=Entrar na Empresa
-newWorkOrderHeader=Novo trabalho atribuído a você
+newWorkOrderHeader=Novo trabalho atribu\u00EDdo a voc\u00EA
 newWorkOrder=Novo Trabalho
-newWorkOrderMessage=Este trabalho foi atribuído a você: {0}
+newWorkOrderMessage=Este trabalho foi atribu\u00EDdo a voc\u00EA: {0}
 seeDetails=Ver mais detalhes
-requestUpdateHeader=Um trabalho que você solicitou foi atualizado
-requestUpdate=Solicitar Atualização
+requestUpdateHeader=Um trabalho que voc\u00EA solicitou foi atualizado
+requestUpdate=Solicitar Atualiza\u00E7\u00E3o
 newPurchaseOrderHeader=Novo Pedido de Compra
 newPurchaseOrder=Novo Pedido de Compra
 resetPwdHeader=Nova Senha do Atlas
-resetPwdMessage=Sua senha foi redefinida. Por favor, faça login novamente usando esta senha: {0}. É importante alterar sua senha o mais rápido possível por motivos de segurança.
+resetPwdMessage=Recebemos uma solicita\u00E7\u00E3o para redefinir sua senha. Por favor, clique no link fornecido para confirmar a redefini\u00E7\u00E3o. Ap\u00F3s a confirma\u00E7\u00E3o, sua nova senha tempor\u00E1ria ser\u00E1: <br><br>{0}<br><br>Certifique-se de alterar essa senha o mais r\u00E1pido poss\u00EDvel para a seguran\u00E7a da sua conta.
 login=Entrar
-wo_number=Ordem de Serviço #{0}
+wo_number=Ordem de Servi\u00E7o #{0}
 format_date={0} dias {1} horas {2} minutos
 created_at=Criado Em
-last_updated=Última Atualização
-assigned_to=Atribuído A
+last_updated=\u00DAltima Atualiza\u00E7\u00E3o
+assigned_to=Atribu\u00EDdo A
 due_date=Data de Vencimento
 status=Status
 priority=Prioridade
-work_order=Ordem de Serviço
+work_order=Ordem de Servi\u00E7o
 details=Detalhes
-location=Localização
-estimated_duration=Duração Estimada
+location=Localiza\u00E7\u00E3o
+estimated_duration=Dura\u00E7\u00E3o Estimada
 team=Equipe
 category=Categoria
 customers=Clientes
-completed_by=Concluído Por
-completed_on=Concluído Em
+completed_by=Conclu\u00EDdo Por
+completed_on=Conclu\u00EDdo Em
 feedback=Feedback
 tasks=Tarefas
-labors=Mão de Obra
-user=Usuário
-duration=Duração
+labors=M\u00E3o de Obra
+user=Usu\u00E1rio
+duration=Dura\u00E7\u00E3o
 cost=Custo
-relations=Relações
+relations=Rela\u00E7\u00F5es
 additional_costs=Custos Adicionais
-history=Histórico
-parts=Peças
+history=Hist\u00F3rico
+parts=Pe\u00E7as
 date=Data
 asset=Ativo
 quantity=Quantidade
 OPEN=Aberto
 IN_PROGRESS=Em Andamento
 ON_HOLD=Em Espera
-COMPLETE=Concluído
+COMPLETE=Conclu\u00EDdo
 NONE=Nenhum
 LOW=Baixa
-MEDIUM=Média
+MEDIUM=M\u00E9dia
 HIGH=Alta
-this_wo_created=Esta Ordem de Serviço foi criada com
-DUPLICATE_OF=é uma duplicata de
-RELATED_TO=está relacionado a
+this_wo_created=Esta Ordem de Servi\u00E7o foi criada com
+DUPLICATE_OF=\u00E9 uma duplicata de
+RELATED_TO=est\u00E1 relacionado a
 SPLIT_FROM=divide de
 BLOCKS=bloqueia
-newRequestHeader=Nova solicitação de trabalho
-newRequest=Nova Solicitação de Trabalho
-newRequestMessage={0} criou uma nova Solicitação: {1}
-approvedRequest=A solicitação "{0}" foi aprovada
-rejectedRequest=Solicitação de trabalho rejeitada
-rejectedRequestMessage=A solicitação "{0}" foi rejeitada
-deleted_wo=Ordem de Serviço Excluída
-deleted_wo_message={1} excluiu a Ordem de Serviço "{0}"
-comingWorkOrderHeader=Ordem de Serviço futura atribuída a você
-coming_wo=Ordem de Serviço Futura
-coming_wo_message=A ordem de serviço "{0}", atribuída a você, está chegando
+newRequestHeader=Nova solicita\u00E7\u00E3o de trabalho
+newRequest=Nova Solicita\u00E7\u00E3o de Trabalho
+newRequestMessage={0} criou uma nova Solicita\u00E7\u00E3o: {1}
+approvedRequest=A solicita\u00E7\u00E3o "{0}" foi aprovada
+rejectedRequest=Solicita\u00E7\u00E3o de trabalho rejeitada
+rejectedRequestMessage=A solicita\u00E7\u00E3o "{0}" foi rejeitada
+deleted_wo=Ordem de Servi\u00E7o Exclu\u00EDda
+deleted_wo_message={1} excluiu a Ordem de Servi\u00E7o "{0}"
+comingWorkOrderHeader=Ordem de Servi\u00E7o futura atribu\u00EDda a voc\u00EA
+coming_wo=Ordem de Servi\u00E7o Futura
+coming_wo_message=A ordem de servi\u00E7o "{0}", atribu\u00EDda a voc\u00EA, est\u00E1 chegando
