--- a/api/src/main/resources/mailMessages_de_DE.properties
+++ b/api/src/main/resources/mailMessages_de_DE.properties
@@ -1,7 +1,7 @@
 welcome=Willkommen,
-regards=Mit freundlichen Grüßen,
+regards=Mit freundlichen Gr\u00FC\u00DFen,
 signature=Unterschrift,
-happyToWelcome=Wir freuen uns, Sie willkommen zu heißen. Bitte überprüfen Sie zuerst Ihr Konto. Drücken Sie den Button unten.
+happyToWelcome=Wir freuen uns, Sie willkommen zu hei\u00DFen. Bitte \u00FCberpr\u00FCfen Sie zuerst Ihr Konto. Dr\u00FCcken Sie den Button unten.
 ifHaveQuestions=Wenn Sie Fragen haben, antworten Sie einfach auf diese E-Mail.
 grashTeam=Das Atlas-Team
 needHelp=Brauchen Sie Hilfe?
@@ -21,20 +21,20 @@ requestUpdate=Anforderungsaktualisierung
 newPurchaseOrderHeader=Neue Bestellung
 newPurchaseOrder=Neue Bestellung
 resetPwdHeader=Neues Atlas-Passwort
-resetPwdMessage=Ihr Passwort wurde zurückgesetzt. Bitte melden Sie sich erneut mit diesem Passwort an: {0}. Es ist wichtig, Ihr Passwort aus Sicherheitsgründen so schnell wie möglich zu ändern.
+resetPwdMessage=Wir haben eine Anfrage zum Zur\u00FCcksetzen Ihres Passworts erhalten. Bitte klicken Sie auf den bereitgestellten Link, um das Zur\u00FCcksetzen zu best\u00E4tigen. Nach der Best\u00E4tigung lautet Ihr neues tempor\u00E4res Passwort: <br><br>{0}<br><br>Bitte \u00E4ndern Sie dieses Passwort so bald wie m\u00F6glich, um die Sicherheit Ihres Kontos zu gew\u00E4hrleisten.
 login=Anmelden
 wo_number=Arbeitsanweisung #{0}
 format_date={0} Tage {1} Stunden {2} Minuten
 created_at=Erstellt am
 last_updated=Zuletzt aktualisiert
 assigned_to=Zugewiesen an
-due_date=Fälligkeitsdatum
+due_date=F\u00E4lligkeitsdatum
 status=Status
-priority=Priorität
+priority=Priorit\u00E4t
 work_order=Arbeitsanweisung
 details=Details
 location=Standort
-estimated_duration=Geschätzte Dauer
+estimated_duration=Gesch\u00E4tzte Dauer
 team=Team
 category=Kategorie
 customers=Kunden
@@ -47,11 +47,11 @@ user=Benutzer
 duration=Dauer
 cost=Kosten
 relations=Beziehungen
-additional_costs=Zusätzliche Kosten
+additional_costs=Zus\u00E4tzliche Kosten
 history=Geschichte
 parts=Teile
 date=Datum
-asset=Vermögenswert
+asset=Verm\u00F6genswert
 quantity=Menge
 OPEN=Offen
 IN_PROGRESS=In Bearbeitung
@@ -72,8 +72,8 @@ newRequestMessage={0} hat eine neue Anfrage erstellt: {1}
 approvedRequest=Die Anfrage "{0}" wurde genehmigt
 rejectedRequest=Abgelehnte Arbeitsanfrage
 rejectedRequestMessage=Die Anfrage "{0}" wurde abgelehnt
-deleted_wo=Gelöschte Arbeitsanweisung
-deleted_wo_message={1} hat gerade die Arbeitsanweisung "{0}" gelöscht
+deleted_wo=Gel\u00F6schte Arbeitsanweisung
+deleted_wo_message={1} hat gerade die Arbeitsanweisung "{0}" gel\u00F6scht
 comingWorkOrderHeader=Bevorstehende Arbeitsanweisung, die Ihnen zugewiesen wurde
 coming_wo=Bevorstehende Arbeitsanweisung
 coming_wo_message=Die Arbeitsanweisung "{0}", die Ihnen zugewiesen wurde, steht bevor
