--- a/api/src/main/resources/mailMessages_tr_TR.properties
+++ b/api/src/main/resources/mailMessages_tr_TR.properties
@@ -23,7 +23,7 @@ requestUpdate=Talep G\u00FCncellemesi
 newPurchaseOrderHeader=Yeni sat\u0131n alma sipari\u015Fi
 newPurchaseOrder=Yeni sat\u0131n alma sipari\u015Fi
 resetPwdHeader=Yeni \u015Eifre
-resetPwdMessage=\u015Eifreniz s\u0131f\u0131rland\u0131. L\u00FCtfen bu \u015Fifreyle tekrar giri\u015F yap\u0131n: {0}. G\u00FCvenlik nedenleriyle \u015Fifrenizi m\u00FCmk\u00FCn olan en k\u0131sa s\u00FCrede de\u011Fi\u015Ftirmeniz \u00F6nemlidir.
+resetPwdMessage=\u015Eifrenizi s\u0131f\u0131rlamak i\u00E7in bir talep ald\u0131k. L\u00FCtfen s\u0131f\u0131rlamay\u0131 onaylamak i\u00E7in verilen ba\u011Flant\u0131ya t\u0131klay\u0131n. Onayland\u0131ktan sonra yeni ge\u00E7ici \u015Fifreniz \u015F\u00F6yle olacakt\u0131r: <br><br>{0}<br><br>Hesab\u0131n\u0131z\u0131n g\u00FCvenli\u011Fi i\u00E7in bu \u015Fifreyi en k\u0131sa s\u00FCrede de\u011Fi\u015Ftirmenizi \u00F6neririz.
 login=Giri\u015F
 wo_number=\u0130\u015F Emri #{0}
 format_date={0} g\u00FCn {1} saat {2} dakika
