feat: add localized notifications for completed work orders
Introduced new message keys and translations for "work order completed" notifications in multiple languages, and updated `WorkOrderController` to notify relevant admins when a work order is marked as complete. Also, broadened exception handling in `NotificationService` to catch all exceptions when sending notifications.

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -91,3 +91,5 @@ STANDBY=Standby
 INSPECTION_SCHEDULED=Inspection Scheduled
 COMMISSIONING=Commissioning
 EMERGENCY_SHUTDOWN=Emergency Shutdown
+complete_work_order=A Work Order is now complete
+complete_work_order_content=The work order "{0}" has been completed by {1}
