--- a/api/src/main/resources/messages_es_ES.properties
+++ b/api/src/main/resources/messages_es_ES.properties
@@ -92,3 +92,5 @@ STANDBY=En espera
 INSPECTION_SCHEDULED=Inspecci\u00F3n programada
 COMMISSIONING=Puesta en marcha
 EMERGENCY_SHUTDOWN=Apagado de emergencia
+complete_work_order=La orden de trabajo est\u00E1 ahora completa  
+complete_work_order_content=La orden de trabajo "{0}" ha sido completada por {1}
