--- a/api/src/main/resources/messages_fr_FR.properties
+++ b/api/src/main/resources/messages_fr_FR.properties
@@ -91,3 +91,5 @@ request_approved_description=La demande de travail "{0}" a \u00E9t\u00E9 approuv
 request_rejected_description=La demande de travail "{0}" a \u00E9t\u00E9 rejet\u00E9e
 request_approved_description_limited_admin={0} a approuv\u00E9 la demande de travail "{1}"
 request_rejected_description_limited_admin={0} a rejet\u00E9 la demande de travail "{1}"
+complete_work_order=Un ordre de travail est maintenant clotur\u00E9
+complete_work_order_content=L'ordre de travail "{0}" a \u00E9t\u00E9 clotur\u00E9 par {1}
