--- a/api/src/main/resources/messages_pl_PL.properties
+++ b/api/src/main/resources/messages_pl_PL.properties
@@ -91,3 +91,5 @@ STANDBY=Tryb oczekiwania
 INSPECTION_SCHEDULED=Zaplanowana inspekcja
 COMMISSIONING=Uruchomienie
 EMERGENCY_SHUTDOWN=Awaryjne wy\u0142\u0105czenie
+complete_work_order=Zlecenie pracy zosta\u0142o zako\u0144czone  
+complete_work_order_content=Zlecenie pracy "{0}" zosta\u0142o zako\u0144czone przez {1}
