--- a/api/src/main/resources/messages_pt_BR.properties
+++ b/api/src/main/resources/messages_pt_BR.properties
@@ -91,3 +91,5 @@ STANDBY=Em espera
 INSPECTION_SCHEDULED=Inspe\u00E7\u00E3o agendada
 COMMISSIONING=Comissionamento
 EMERGENCY_SHUTDOWN=Desligamento de emerg\u00EAncia
+complete_work_order=Uma ordem de servi\u00E7o foi conclu\u00EDda
+complete_work_order_content=A ordem de servi\u00E7o "{0}" foi conclu\u00EDda por {1}
