--- a/api/src/main/resources/messages_tr_TR.properties
+++ b/api/src/main/resources/messages_tr_TR.properties
@@ -91,3 +91,5 @@ request_approved_description="{0}" i\u015F talebi onayland\u0131
 request_rejected_description="{0}" i\u015F talebi reddedildi
 request_approved_description_limited_admin={0}, "{1}" i\u015F talebini onaylad\u0131
 request_rejected_description_limited_admin={0}, "{1}" i\u015F talebini reddetti
+complete_work_order=Bir i\u015F emri tamamland\u0131  
+complete_work_order_content="{0}" i\u015F emri {1} taraf\u0131ndan tamamland\u0131
