--- a/api/src/main/resources/messages_de_DE.properties
+++ b/api/src/main/resources/messages_de_DE.properties
@@ -1,17 +1,17 @@
 Title=Titel
 Status=Status
 ID=ID
-Priority=Priorität
+Priority=Priorit\u00E4t
 Description=Beschreibung
-Due_Date=Fälligkeitsdatum
-Estimated_Duration=Geschätzte Dauer
+Due_Date=F\u00E4lligkeitsdatum
+Estimated_Duration=Gesch\u00E4tzte Dauer
 Requires_Signature=Unterschrift erforderlich
 Category=Kategorie
 Location_Name=Standortname
 Team_Name=Teamname
-Primary_User_Email=Primärer Benutzer
+Primary_User_Email=Prim\u00E4rer Benutzer
 Assigned_To_Emails=Zugewiesen an
-Asset_Name=Vermögenswertname
+Asset_Name=Verm\u00F6genswertname
 Completed_By_Email=Abgeschlossen von
 Completed_On=Abgeschlossen am
 Archived=Archiviert
@@ -27,21 +27,21 @@ HIGH=Hoch
 Yes=Ja
 No=Nein
 Name=Name
-Parent_Asset=Übergeordneter Vermögenswert
+Parent_Asset=\u00DCbergeordneter Verm\u00F6genswert
 Area=Bereich
 Barcode=Barcode
 Warranty_Expiration_Date=Garantieablaufdatum
-Additional_Information=Zusätzliche Informationen
+Additional_Information=Zus\u00E4tzliche Informationen
 Serial_Number=Seriennummer
 Teams_Names=Teamnamen
 Parts=Teile
-Parent_Location=Übergeordneter Standort
+Parent_Location=\u00DCbergeordneter Standort
 Address=Adresse
 Workers=Arbeiter
 Vendors=Lieferanten
 Customers=Auftragnehmer
 Cost=Kosten
-Non_Stock=Nicht vorrätig
+Non_Stock=Nicht vorr\u00E4tig
 Quantity=Menge
 Minimum_Quantity=Mindestmenge
 Unit=Einheit
@@ -49,24 +49,24 @@ Update_Frequency=Aktualisierungsfrequenz
 OPERATIONAL=Operational
 DOWN=Down
 notification_wo_request=Die von Ihnen angeforderte Arbeitsanweisung, {0}, ist jetzt {1}
-notification_meter_assigned=Zähler {0} wurde Ihnen zugewiesen
+notification_meter_assigned=Z\u00E4hler {0} wurde Ihnen zugewiesen
 notification_part_low={0} wird niedrig
 notification_location_assigned=Standort {0} wurde Ihnen zugewiesen
 notification_new_po_request=Neue Bestellung angefordert: {0} kostet {1} {2}
 notification_new_request=Eine neue Arbeitsanweisung wurde angefordert
 notification_part_assigned=Teil {0} wurde Ihnen zugewiesen
-notification_asset_assigned=Vermögenswert {0} wurde Ihnen zugewiesen
+notification_asset_assigned=Verm\u00F6genswert {0} wurde Ihnen zugewiesen
 notification_asset_operational={0} ist jetzt operational
 notification_asset_down={0} ist down
-notification_team_added=Sie wurden dem Team {0} hinzugefügt
+notification_team_added=Sie wurden dem Team {0} hinzugef\u00FCgt
 notification_wo_assigned=Arbeitsanweisung {0} wurde Ihnen zugewiesen
 notification_reading_less_than={0} Wert ist weniger als {1}{2}
 notification_reading_more_than={0} Wert ist mehr als {1}{2}
 new_wo=Neue Arbeitsanweisung
 request_update=Aktualisierung der Arbeitsanfrage
 new_po=Neue Bestellung angefordert
-confirmation_email=Bestätigungs-E-Mail
-password_reset=Atlas-Passwort zurücksetzen
+confirmation_email=Best\u00E4tigungs-E-Mail
+password_reset=Atlas-Passwort zur\u00FCcksetzen
 invitation_to_use=Einladung zur Nutzung von Atlas
 updating_wo=Aktualisiert {0}
 PASS=Pass
@@ -74,7 +74,7 @@ FLAG=Flag
 FAIL=Fehler
 new_request=Neue Anfrage
 new_assignment=Neue Zuweisung
-asset_status_change=Änderung des Vermögenswertstatus
+asset_status_change=\u00C4nderung des Verm\u00F6genswertstatus
 new_team=Neues Team
 request_approved=Genehmigte Arbeitsanfrage
 request_rejected=Abgelehnte Arbeitsanfrage
@@ -82,7 +82,7 @@ request_approved_description=Die Arbeitsanfrage "{0}" wurde genehmigt
 request_rejected_description=Die Arbeitsanfrage "{0}" wurde abgelehnt
 request_approved_description_limited_admin={0} genehmigte die Arbeitsanfrage "{1}"
 request_rejected_description_limited_admin={0} lehnte die Arbeitsanfrage "{1}" ab
-deleted_wo=Gelöschte Arbeitsanweisung
+deleted_wo=Gel\u00F6schte Arbeitsanweisung
 Created_At=Erstellt am
 Downtime_Duration=Ausfallzeitdauer
 coming_wo=Bevorstehende Arbeitsanweisung
@@ -91,3 +91,6 @@ STANDBY=Standby
 INSPECTION_SCHEDULED=Inspektion geplant
 COMMISSIONING=Inbetriebnahme
 EMERGENCY_SHUTDOWN=Notabschaltung
+complete_work_order=Ein Arbeitsauftrag ist jetzt abgeschlossen  
+complete_work_order_content=Der Arbeitsauftrag "{0}" wurde von {1} abgeschlossen
+
