chore: update reset password email to use "Confirm reset" button in all supported languages
Revised the reset password email message in all language property files to instruct users to click a confirmation button instead of a link. Added a new `confirm_reset` label for the button in each language and updated the email template to use this label, ensuring consistency and clarity in password reset instructions across all locales.

--- a/api/src/main/resources/mailMessages_de_DE.properties
+++ b/api/src/main/resources/mailMessages_de_DE.properties
@@ -21,7 +21,6 @@ requestUpdate=Anforderungsaktualisierung
 newPurchaseOrderHeader=Neue Bestellung
 newPurchaseOrder=Neue Bestellung
 resetPwdHeader=Neues Atlas-Passwort
-resetPwdMessage=Wir haben eine Anfrage zum Zur\u00FCcksetzen Ihres Passworts erhalten. Bitte klicken Sie auf den bereitgestellten Link, um das Zur\u00FCcksetzen zu best\u00E4tigen. Nach der Best\u00E4tigung lautet Ihr neues tempor\u00E4res Passwort: <br><br>{0}<br><br>Bitte \u00E4ndern Sie dieses Passwort so bald wie m\u00F6glich, um die Sicherheit Ihres Kontos zu gew\u00E4hrleisten.
 login=Anmelden
 wo_number=Arbeitsanweisung #{0}
 format_date={0} Tage {1} Stunden {2} Minuten
@@ -77,3 +76,5 @@ deleted_wo_message={1} hat gerade die Arbeitsanweisung "{0}" gel\u00F6scht
 comingWorkOrderHeader=Bevorstehende Arbeitsanweisung, die Ihnen zugewiesen wurde
 coming_wo=Bevorstehende Arbeitsanweisung
 coming_wo_message=Die Arbeitsanweisung "{0}", die Ihnen zugewiesen wurde, steht bevor
+resetPwdMessage=Wir haben eine Anfrage zum Zur\u00FCcksetzen Ihres Passworts erhalten. Bitte klicken Sie auf die Schaltfl\u00E4che unten, um das Zur\u00FCcksetzen zu best\u00E4tigen. Nach der Best\u00E4tigung lautet Ihr neues tempor\u00E4res Passwort: <br><br>{0}<br><br>Bitte \u00E4ndern Sie dieses Passwort so bald wie m\u00F6glich, um die Sicherheit Ihres Kontos zu gew\u00E4hrleisten.
+confirm_reset=Zur\u00FCcksetzen best\u00E4tigen
