--- a/api/src/main/resources/mailMessages_es_ES.properties
+++ b/api/src/main/resources/mailMessages_es_ES.properties
@@ -21,7 +21,6 @@ requestUpdate=Actualizar solicitud
 newPurchaseOrderHeader=Nueva orden de compra
 newPurchaseOrder=Nueva orden de compra
 resetPwdHeader=Nueva contrase\u00F1a de Atlas
-resetPwdMessage=Hemos recibido una solicitud para restablecer su contrase\u00F1a. Por favor, haga clic en el enlace proporcionado para confirmar el restablecimiento. Una vez confirmado, su nueva contrase\u00F1a temporal ser\u00E1: <br><br>{0}<br><br>Por favor, aseg\u00FArese de cambiar esta contrase\u00F1a lo antes posible para la seguridad de su cuenta.
 login=Iniciar sesi\u00F3n
 wo_number=Orden de Trabajo #{0}
 format_date={0} d\u00EDas {1} horas {2} minutos
@@ -77,3 +76,5 @@ deleted_wo_message={1} orden de trabajo ha Sido eliminada"{0}"
 comingWorkOrderHeader=Pr\u00F3xima Orden de Trabajo asignada a usted
 coming_wo=Pr\u00F3xima Orden de Trabajo
 coming_wo_message=La Orden de Trabajo "{0}", asignada a usted se encuentra en preparaci\u00F3n
+resetPwdMessage=Hemos recibido una solicitud para restablecer tu contrase\u00F1a. Haz clic en el bot\u00F3n de abajo para confirmar el restablecimiento. Una vez confirmado, tu nueva contrase\u00F1a temporal ser\u00E1: <br><br>{0}<br><br>Aseg\u00FArate de cambiar esta contrase\u00F1a lo antes posible por la seguridad de tu cuenta.
+confirm_reset=Confirmar restablecimiento
