--- a/api/src/main/resources/mailMessages_pl_PL.properties
+++ b/api/src/main/resources/mailMessages_pl_PL.properties
@@ -21,7 +21,6 @@ requestUpdate=Aktualizacja Zg\u0142oszenia
 newPurchaseOrderHeader=Nowe Zam\u00F3wienie
 newPurchaseOrder=Nowe Zam\u00F3wienie
 resetPwdHeader=Nowe has\u0142o do Atlas CMMS
-resetPwdMessage=Otrzymali\u015Bmy pro\u015Bb\u0119 o zresetowanie Twojego has\u0142a. Kliknij w podany link, aby potwierdzi\u0107 resetowanie. Po potwierdzeniu Twoje nowe tymczasowe has\u0142o b\u0119dzie nast\u0119puj\u0105ce: <br><br>{0}<br><br>Prosimy o zmian\u0119 tego has\u0142a jak najszybciej w celu zapewnienia bezpiecze\u0144stwa konta.
 login=Zaloguj
 wo_number=Zadanie #{0}
 format_date={0} dni {1} godz. {2} min.
@@ -77,4 +76,6 @@ deleted_wo_message={1} w\u0142a\u015Bnie usun\u0105\u0142 Zadanie "{0}"
 comingWorkOrderHeader=Nadchodz\u0105ce Zadanie przypisane do Ciebie
 coming_wo=Nadchodz\u0105ce Zadanie
 coming_wo_message=Zbli\u017Ca si\u0119 termin Zadania "{0}", przypisanego do Ciebie
+resetPwdMessage=Otrzymali\u015Bmy pro\u015Bb\u0119 o zresetowanie has\u0142a. Kliknij przycisk poni\u017Cej, aby potwierdzi\u0107 resetowanie. Po potwierdzeniu, Twoje nowe tymczasowe has\u0142o to: <br><br>{0}<br><br>Upewnij si\u0119, \u017Ce jak najszybciej zmienisz to has\u0142o dla bezpiecze\u0144stwa swojego konta.
+confirm_reset=Potwierd\u017A reset
 
