--- a/api/src/main/resources/mailMessages_pt_BR.properties
+++ b/api/src/main/resources/mailMessages_pt_BR.properties
@@ -21,7 +21,6 @@ requestUpdate=Solicitar Atualiza\u00E7\u00E3o
 newPurchaseOrderHeader=Novo Pedido de Compra
 newPurchaseOrder=Novo Pedido de Compra
 resetPwdHeader=Nova Senha do Atlas
-resetPwdMessage=Recebemos uma solicita\u00E7\u00E3o para redefinir sua senha. Por favor, clique no link fornecido para confirmar a redefini\u00E7\u00E3o. Ap\u00F3s a confirma\u00E7\u00E3o, sua nova senha tempor\u00E1ria ser\u00E1: <br><br>{0}<br><br>Certifique-se de alterar essa senha o mais r\u00E1pido poss\u00EDvel para a seguran\u00E7a da sua conta.
 login=Entrar
 wo_number=Ordem de Servi\u00E7o #{0}
 format_date={0} dias {1} horas {2} minutos
@@ -77,3 +76,5 @@ deleted_wo_message={1} excluiu a Ordem de Servi\u00E7o "{0}"
 comingWorkOrderHeader=Ordem de Servi\u00E7o futura atribu\u00EDda a voc\u00EA
 coming_wo=Ordem de Servi\u00E7o Futura
 coming_wo_message=A ordem de servi\u00E7o "{0}", atribu\u00EDda a voc\u00EA, est\u00E1 chegando
+resetPwdMessage=Recebemos uma solicita\u00E7\u00E3o para redefinir sua senha. Clique no bot\u00E3o abaixo para confirmar a redefini\u00E7\u00E3o. Ap\u00F3s a confirma\u00E7\u00E3o, sua nova senha tempor\u00E1ria ser\u00E1: <br><br>{0}<br><br>Certifique-se de alterar essa senha o quanto antes para a seguran\u00E7a da sua conta.
+confirm_reset=Confirmar redefini\u00E7\u00E3o
