--- a/api/src/main/resources/mailMessages_fr_FR.properties
+++ b/api/src/main/resources/mailMessages_fr_FR.properties
@@ -23,7 +23,6 @@ requestUpdate=Mise \u00E0 jour sur une Demande
 newPurchaseOrderHeader=Nouveau bon de commande
 newPurchaseOrder=Nouveau bon de commande
 resetPwdHeader=Nouveau mot de passe
-resetPwdMessage=Nous avons re\u00E7u une demande de r\u00E9initialisation de votre mot de passe. Veuillez cliquer sur le lien fourni pour confirmer la r\u00E9initialisation. Une fois confirm\u00E9e, votre nouveau mot de passe temporaire sera : <br><br>{0}<br><br>Veuillez changer ce mot de passe d\u00E8s que possible pour assurer la s\u00E9curit\u00E9 de votre compte.
 login=Se connecter
 wo_number=Bon de Travail #{0}
 format_date={0} jours {1} heures {2} minutes
@@ -79,5 +78,6 @@ deleted_wo_message={1} vient de supprimer l'ordre de travail "{0}"
 comingWorkOrderHeader=Bon de travail \u00E0 venir qui vous est assign\u00E9
 coming_wo=Bon de travail \u00E0 venir
 coming_wo_message=Le bon de travail "{0}" qui vous a \u00E9t\u00E9 attribu\u00E9 est \u00E0 venir
-
+resetPwdMessage=Nous avons re\u00E7u une demande de r\u00E9initialisation de votre mot de passe. Veuillez cliquer sur le bouton ci-dessous pour confirmer la r\u00E9initialisation. Une fois confirm\u00E9e, votre nouveau mot de passe temporaire sera : <br><br>{0}<br><br>Veuillez changer ce mot de passe d\u00E8s que possible pour la s\u00E9curit\u00E9 de votre compte.
+confirm_reset=Confirmer la r\u00E9initialisation
 
