--- a/api/src/main/resources/mailMessages_tr_TR.properties
+++ b/api/src/main/resources/mailMessages_tr_TR.properties
@@ -23,7 +23,6 @@ requestUpdate=Talep G\u00FCncellemesi
 newPurchaseOrderHeader=Yeni sat\u0131n alma sipari\u015Fi
 newPurchaseOrder=Yeni sat\u0131n alma sipari\u015Fi
 resetPwdHeader=Yeni \u015Eifre
-resetPwdMessage=\u015Eifrenizi s\u0131f\u0131rlamak i\u00E7in bir talep ald\u0131k. L\u00FCtfen s\u0131f\u0131rlamay\u0131 onaylamak i\u00E7in verilen ba\u011Flant\u0131ya t\u0131klay\u0131n. Onayland\u0131ktan sonra yeni ge\u00E7ici \u015Fifreniz \u015F\u00F6yle olacakt\u0131r: <br><br>{0}<br><br>Hesab\u0131n\u0131z\u0131n g\u00FCvenli\u011Fi i\u00E7in bu \u015Fifreyi en k\u0131sa s\u00FCrede de\u011Fi\u015Ftirmenizi \u00F6neririz.
 login=Giri\u015F
 wo_number=\u0130\u015F Emri #{0}
 format_date={0} g\u00FCn {1} saat {2} dakika
@@ -79,6 +78,8 @@ deleted_wo_message={1} "{0}" i\u015F emrini sildi
 comingWorkOrderHeader=Size atanan gelecek i\u015F emri
 coming_wo=Gelen \u0130\u015F Emri
 coming_wo_message=Size atanm\u0131\u015F "{0}" i\u015F emri yak\u0131nda gelecek
+resetPwdMessage=\u015Eifrenizi s\u0131f\u0131rlamak i\u00E7in bir istek ald\u0131k. L\u00FCtfen s\u0131f\u0131rlamay\u0131 onaylamak i\u00E7in a\u015Fa\u011F\u0131daki butona t\u0131klay\u0131n. Onayland\u0131ktan sonra ge\u00E7ici yeni \u015Fifreniz \u015Fu olacakt\u0131r: <br><br>{0}<br><br>Hesab\u0131n\u0131z\u0131n g\u00FCvenli\u011Fi i\u00E7in bu \u015Fifreyi en k\u0131sa s\u00FCrede de\u011Fi\u015Ftirmeniz \u00F6nemlidir.
+confirm_reset=S\u0131f\u0131rlamay\u0131 onayla
 
 
 
