refactor: notification email templates to use shared branding and layout
Centralized branding by introducing `BrandConfig` and updating all notification email templates to reference the shared `main-layout` Thymeleaf fragment. Email templates now consistently use dynamic brand values (name, short name, etc.) and background color via `BrandingService`, improving maintainability and supporting white-labeling. Controllers and services were updated to inject and use `BrandingService` for all relevant email operations. Message properties and templates were adjusted to support parameterization of brand-specific strings.

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -66,8 +66,8 @@ new_wo=New Work Order
 request_update=Work Order Request Update
 new_po=New Purchase Order Requested
 confirmation_email=Confirmation Email
-password_reset=Atlas Password Reset
-invitation_to_use=Invitation to use Atlas
+password_reset={0} Password Reset
+invitation_to_use=Invitation to use {0}
 updating_wo=Updated {0}
 PASS=Pass
 FLAG=Flag
