refactor: notification message properties for dynamic branding support
Replaced hardcoded brand references in all localized mail and message properties with parameterized placeholders (e.g., `{0}`), enabling dynamic insertion of brand names and terms. This enhances consistency across languages and supports white-labeling by allowing runtime brand customization in email templates and notifications.

--- a/api/src/main/resources/mailMessages_de_DE.properties
+++ b/api/src/main/resources/mailMessages_de_DE.properties
@@ -3,14 +3,14 @@ regards=Mit freundlichen Gr\u00FC\u00DFen,
 signature=Unterschrift,
 happyToWelcome=Wir freuen uns, Sie willkommen zu hei\u00DFen. Bitte \u00FCberpr\u00FCfen Sie zuerst Ihr Konto. Dr\u00FCcken Sie den Button unten.
 ifHaveQuestions=Wenn Sie Fragen haben, antworten Sie einfach auf diese E-Mail.
-grashTeam=Das Atlas-Team
+grashTeam=Das {0}-Team
 needHelp=Brauchen Sie Hilfe?
 hereToHelp=Wir sind hier, um Ihnen zu helfen.
 verifyAccount=Konto verifizieren
 signupHeader=Wir freuen uns, Sie hier zu haben! Bereiten Sie sich darauf vor, in Ihr neues Konto einzutauchen.
-inviteHeader=Sie wurden eingeladen, Atlas CMMS zu nutzen.
-inviteTitle=Einladung zur Nutzung von Atlas CMMS.
-inviteMessage={0} hat Sie eingeladen, dem Unternehmen {1} auf Atlas beizutreten.
+inviteHeader=Sie wurden eingeladen,{0} zu nutzen.
+inviteTitle=Einladung zur Nutzung von {0}.
+inviteMessage={0} hat Sie eingeladen, dem Unternehmen {1} auf {2} beizutreten.
 joinCompany=Unternehmen beitreten
 newWorkOrderHeader=Neue Arbeitsanweisung, die Ihnen zugewiesen wurde
 newWorkOrder=Neue Arbeitsanweisung
@@ -20,7 +20,7 @@ requestUpdateHeader=Eine von Ihnen angeforderte Arbeitsanweisung wurde aktualisi
 requestUpdate=Anforderungsaktualisierung
 newPurchaseOrderHeader=Neue Bestellung
 newPurchaseOrder=Neue Bestellung
-resetPwdHeader=Neues Atlas-Passwort
+resetPwdHeader=Neues {0}-Passwort
 login=Anmelden
 wo_number=Arbeitsanweisung #{0}
 format_date={0} Tage {1} Stunden {2} Minuten
