--- a/api/src/main/resources/mailMessages_es_ES.properties
+++ b/api/src/main/resources/mailMessages_es_ES.properties
@@ -3,14 +3,14 @@ regards=Saludos,
 signature=Firma
 happyToWelcome=Estamos felices de darle la bienvenida. Para comenzar, primero verifique su cuenta. Presione el bot\u00F3n de abajo.
 ifHaveQuestions=Si tiene alguna duda responda este e-mail.
-grashTeam=The Atlas Team
+grashTeam=The {0} Team
 needHelp=\u00BFNecesita ayuda?
 hereToHelp=Estamos aqu\u00ED para ayudarte
 verifyAccount=Verificar cuenta
 signupHeader=\u00A1Estamos encantados de tenerte aqu\u00ED! Prep\u00E1rate para sumergirte en tu nueva cuenta.
-inviteHeader=Has sido invitado a usar Atlas CMMS.
-inviteTitle=Invitaci\u00F3n a usar Atlas CMMS.
-inviteMessage={0} Te ha invitado a unirte a la compa\u00F1\u00EDa {1} en Atlas.
+inviteHeader=Has sido invitado a usar {0}.
+inviteTitle=Invitaci\u00F3n a usar {0}.
+inviteMessage={0} Te ha invitado a unirte a la compa\u00F1\u00EDa {1} en {2}.
 joinCompany=Unirse a la compa\u00F1\u00EDa
 newWorkOrderHeader=Se te ha asignado una nueva Orden de Trabajo
 newWorkOrder=Nueva Orden de Trabajo
@@ -20,7 +20,7 @@ requestUpdateHeader=Se ha actualizado una Orden de Trabajo que usted solicito
 requestUpdate=Actualizar solicitud
 newPurchaseOrderHeader=Nueva orden de compra
 newPurchaseOrder=Nueva orden de compra
-resetPwdHeader=Nueva contrase\u00F1a de Atlas
+resetPwdHeader=Nueva contrase\u00F1a de {0}
 login=Iniciar sesi\u00F3n
 wo_number=Orden de Trabajo #{0}
 format_date={0} d\u00EDas {1} horas {2} minutos
