--- a/api/src/main/resources/mailMessages_fr_FR.properties
+++ b/api/src/main/resources/mailMessages_fr_FR.properties
@@ -5,14 +5,14 @@ unsubscribe=Se d\u00E9sinscrire de ces emails ici
 signature=Signature
 happyToWelcome=Nous sommes heureux de vous accueillir. Veuillez d'abord v\u00E9rifier votre compte. Appuyez sur le bouton ci-dessous.
 ifHaveQuestions=Si vous avez des questions, juste r\u00E9pondez \u00E0 ce mail.
-grashTeam=L'\u00E9quipe Atlas
+grashTeam=L'\u00E9quipe {0}
 needHelp=Besoin d'aide?
 hereToHelp=Nous sommes l\u00E0 pour vous aider
 verifyAccount=V\u00E9rifier le compte
 signupHeader=Nous sommes ravis de vous avoir ici! Pr\u00E9parez-vous \u00E0 plonger dans votre nouveau compte.
-inviteHeader=Vous avez \u00E9t\u00E9 invit\u00E9 \u00E0 utiliser le GMAO Atlas.
-inviteTitle=Invitation \u00E0 utiliser Atlas.
-inviteMessage={0} vous a invit\u00E9 \u00E0 joindre {1} sur Atlas.
+inviteHeader=Vous avez \u00E9t\u00E9 invit\u00E9 \u00E0 utiliser le {0}.
+inviteTitle=Invitation \u00E0 utiliser {0}.
+inviteMessage={0} vous a invit\u00E9 \u00E0 joindre {1} sur {2}.
 joinCompany=Rejoindre
 newWorkOrderHeader=Nouveau bon de travail qui vous est assign\u00E9
 newWorkOrder=Nouvel ordre de travail
@@ -22,7 +22,7 @@ requestUpdateHeader=Un ordre de travail que vous avez demand\u00E9 a \u00E9t\u00
 requestUpdate=Mise \u00E0 jour sur une Demande
 newPurchaseOrderHeader=Nouveau bon de commande
 newPurchaseOrder=Nouveau bon de commande
-resetPwdHeader=Nouveau mot de passe
+resetPwdHeader=Nouveau mot de passe {0}
 login=Se connecter
 wo_number=Bon de Travail #{0}
 format_date={0} jours {1} heures {2} minutes
