--- a/api/src/main/resources/mailMessages_pl_PL.properties
+++ b/api/src/main/resources/mailMessages_pl_PL.properties
@@ -3,14 +3,14 @@ regards=Pozdrowienia,
 signature=Podpis
 happyToWelcome=Witamy! Najpierw sprawd\u017A swoje konto. Naci\u015Bnij przycisk poni\u017Cej.
 ifHaveQuestions=Je\u015Bli masz pytania - odpowiedz na tego maila.
-grashTeam=Zesp\u00F3\u0142 Atlas
+grashTeam=Zesp\u00F3\u0142 {0}
 needHelp=Potrzebujesz pomocy?
 hereToHelp=Jeste\u015Bmy tutaj, aby Ci pom\u00F3c
 verifyAccount=Zweryfikuj konto
 signupHeader=Cieszymy si\u0119, \u017Ce tu jeste\u015B! Sprawd\u017A swoje konto.
-inviteHeader=Zosta\u0142e\u015B zaproszony, aby korzysta\u0107 z Atlas CMMS.
-inviteTitle=Zaproszenie do korzystania z Atlas CMMS.
-inviteMessage={0} zaprosi\u0142 Ci\u0119 do do\u0142\u0105czenia do firmy {1} na platformie Atlas.
+inviteHeader=Zosta\u0142e\u015B zaproszony, aby korzysta\u0107 z {0}.
+inviteTitle=Zaproszenie do korzystania z {0}.
+inviteMessage={0} zaprosi\u0142 Ci\u0119 do do\u0142\u0105czenia do firmy {1} na platformie {2}.
 joinCompany=Do\u0142\u0105cz do firmy
 newWorkOrderHeader=Nowe Zadanie zosta\u0142o przypisane do Ciebie
 newWorkOrder=Nowe Zadanie
@@ -20,7 +20,7 @@ requestUpdateHeader=Zadanie, kt\u00F3re zg\u0142asza\u0142e\u015B zosta\u0142o z
 requestUpdate=Aktualizacja Zg\u0142oszenia
 newPurchaseOrderHeader=Nowe Zam\u00F3wienie
 newPurchaseOrder=Nowe Zam\u00F3wienie
-resetPwdHeader=Nowe has\u0142o do Atlas CMMS
+resetPwdHeader=Nowe has\u0142o do {0}
 login=Zaloguj
 wo_number=Zadanie #{0}
 format_date={0} dni {1} godz. {2} min.
