--- a/api/src/main/resources/mailMessages_pt_BR.properties
+++ b/api/src/main/resources/mailMessages_pt_BR.properties
@@ -3,14 +3,14 @@ regards=Atenciosamente,
 signature=Assinatura
 happyToWelcome=Estamos felizes em receb\u00EA-lo. Por favor, verifique primeiro sua conta. Clique no bot\u00E3o abaixo.
 ifHaveQuestions=Se tiver alguma d\u00FAvida, basta responder a este e-mail.
-grashTeam=Equipe Atlas
+grashTeam=Equipe {0}
 needHelp=Precisa de ajuda?
 hereToHelp=Estamos aqui para ajud\u00E1-lo
 verifyAccount=Verificar Conta
 signupHeader=Estamos felizes em t\u00EA-lo aqui! Prepare-se para mergulhar em sua nova conta.
-inviteHeader=Voc\u00EA foi convidado a usar o Atlas CMMS.
-inviteTitle=Convite para usar o Atlas CMMS.
-inviteMessage={0} convidou voc\u00EA para se juntar \u00E0 empresa {1} no Atlas.
+inviteHeader=Voc\u00EA foi convidado a usar o {0}.
+inviteTitle=Convite para usar o {0}.
+inviteMessage={0} convidou voc\u00EA para se juntar \u00E0 empresa {1} no {2}.
 joinCompany=Entrar na Empresa
 newWorkOrderHeader=Novo trabalho atribu\u00EDdo a voc\u00EA
 newWorkOrder=Novo Trabalho
@@ -20,7 +20,7 @@ requestUpdateHeader=Um trabalho que voc\u00EA solicitou foi atualizado
 requestUpdate=Solicitar Atualiza\u00E7\u00E3o
 newPurchaseOrderHeader=Novo Pedido de Compra
 newPurchaseOrder=Novo Pedido de Compra
-resetPwdHeader=Nova Senha do Atlas
+resetPwdHeader=Nova Senha do {0}
 login=Entrar
 wo_number=Ordem de Servi\u00E7o #{0}
 format_date={0} dias {1} horas {2} minutos
