--- a/api/src/main/resources/messages_de_DE.properties
+++ b/api/src/main/resources/messages_de_DE.properties
@@ -66,8 +66,8 @@ new_wo=Neue Arbeitsanweisung
 request_update=Aktualisierung der Arbeitsanfrage
 new_po=Neue Bestellung angefordert
 confirmation_email=Best\u00E4tigungs-E-Mail
-password_reset=Atlas-Passwort zur\u00FCcksetzen
-invitation_to_use=Einladung zur Nutzung von Atlas
+password_reset={0}-Passwort zur\u00FCcksetzen
+invitation_to_use=Einladung zur Nutzung von {0}
 updating_wo=Aktualisiert {0}
 PASS=Pass
 FLAG=Flag
