--- a/api/src/main/resources/messages_es_ES.properties
+++ b/api/src/main/resources/messages_es_ES.properties
@@ -67,8 +67,8 @@ new_wo=Nueva orden de trabajo
 request_update=Actualizaci\u00F3n de solicitud de orden de trabajo
 new_po=Nueva orden de trabajo solicitada
 confirmation_email=Correo electr\u00F3nico de confirmaci\u00F3n
-password_reset=Restablecer la contrase\u00F1a de Atlas
-invitation_to_use=Invitaci\u00F3n a usar Atlas
+password_reset=Restablecer la contrase\u00F1a de {0}
+invitation_to_use=Invitaci\u00F3n a usar {0}
 updating_wo=Actualizada {0}
 PASS=Aprobada
 FLAG=Insignia
