--- a/api/src/main/resources/messages_fr_FR.properties
+++ b/api/src/main/resources/messages_fr_FR.properties
@@ -67,7 +67,7 @@ request_update=Mise \u00E0 jour de la demande de bon de travail
 new_po=Nouveau bon de commande demand\u00E9
 confirmation_email=Courriel de confirmation
 password_reset=R\u00E9initialiser le mot de passe
-invitation_to_use=Invitation \u00E0 utiliser Atlas
+invitation_to_use=Invitation \u00E0 utiliser {0}
 updating_wo=A modifi\u00E9 {0}
 PASS=Pass\u00E9
 FLAG=Signal\u00E9
