--- a/api/src/main/resources/messages_pl_PL.properties
+++ b/api/src/main/resources/messages_pl_PL.properties
@@ -66,8 +66,8 @@ new_wo=Nowe zlecenie pracy
 request_update=Aktualizacja zg\u0142oszenia zlecenia pracy
 new_po=Nowe zam\u00F3wienie zosta\u0142o zg\u0142oszone
 confirmation_email=Email potwierdzaj\u0105cy
-password_reset=Reset has\u0142a Atlas
-invitation_to_use=Zaproszenie do korzystania z Atlas
+password_reset=Reset has\u0142a {0}
+invitation_to_use=Zaproszenie do korzystania z {0}
 updating_wo=Zaktualizowano {0}
 PASS=Zaliczony
 FLAG=Flaga
