--- a/api/src/main/resources/messages_pt_BR.properties
+++ b/api/src/main/resources/messages_pt_BR.properties
@@ -66,8 +66,8 @@ new_wo=Nova Ordem de Servi\u00E7o
 request_update=Atualiza\u00E7\u00E3o de Solicita\u00E7\u00E3o de Ordem de Servi\u00E7o
 new_po=Novo Pedido de Compra Solicitado
 confirmation_email=E-mail de Confirma\u00E7\u00E3o
-password_reset=Redefini\u00E7\u00E3o de Senha do Atlas
-invitation_to_use=Convite para usar o Atlas
+password_reset=Redefini\u00E7\u00E3o de Senha do {0}
+invitation_to_use=Convite para usar o {0}
 updating_wo=Atualizado {0}
 PASS=Aprovado
 FLAG=Sinalizar
