--- a/api/src/main/resources/messages_tr_TR.properties
+++ b/api/src/main/resources/messages_tr_TR.properties
@@ -66,8 +66,8 @@ new_wo=Yeni \u0130\u015F Emri
 request_update=\u0130\u015F Emri Talep G\u00FCncellemesi
 new_po=Yeni Sat\u0131n Alma Talebi
 confirmation_email=Onay E-postas\u0131
-password_reset=Atlas \u015Eifre S\u0131f\u0131rlama
-invitation_to_use=Atlas'\u0131 Kullanma Davetiyesi
+password_reset={0} \u015Eifre S\u0131f\u0131rlama
+invitation_to_use={0}'\u0131 Kullanma Davetiyesi
 updating_wo={0} G\u00FCncellendi
 PASS=Ge\u00E7
 FLAG=Bayrak
