--- a/api/src/main/resources/mailMessages_tr_TR.properties
+++ b/api/src/main/resources/mailMessages_tr_TR.properties
@@ -5,14 +5,14 @@ unsubscribe=Bu e-postalardan ayr\u0131lmak i\u00E7in buraya t\u0131klay\u0131n
 signature=\u0130mza
 happyToWelcome=Sizi aram\u0131zda g\u00F6rmekten mutluluk duyuyoruz. L\u00FCtfen \u00F6nce hesab\u0131n\u0131z\u0131 do\u011Frulay\u0131n. A\u015Fa\u011F\u0131daki d\u00FC\u011Fmeye bas\u0131n.
 ifHaveQuestions=Sorular\u0131n\u0131z varsa, l\u00FCtfen bu e-postaya cevap verin.
-grashTeam=Atlas Ekibi
+grashTeam={0} Ekibi
 needHelp=Yard\u0131ma m\u0131 ihtiyac\u0131n\u0131z var?
 hereToHelp=Yard\u0131m etmek i\u00E7in buraday\u0131z
 verifyAccount=Hesab\u0131 Do\u011Frula
 signupHeader=Sizi burada g\u00F6rmekten mutluluk duyuyoruz! Yeni hesab\u0131n\u0131za dalmaya haz\u0131rlan\u0131n.
-inviteHeader=Atlas GMAO'yu kullanman\u0131z i\u00E7in davet edildiniz.
-inviteTitle=Atlas'\u0131 Kullanma Daveti
-inviteMessage={0}, sizi Atlas'taki {1} \u00FCzerine kat\u0131lmaya davet etti.
+inviteHeader={0}'yu kullanman\u0131z i\u00E7in davet edildiniz.
+inviteTitle={0}'\u0131 Kullanma Daveti
+inviteMessage={0}, sizi {2}'taki {1} \u00FCzerine kat\u0131lmaya davet etti.
 joinCompany=Kat\u0131l
 newWorkOrderHeader=Size atanan yeni i\u015F emri
 newWorkOrder=Yeni i\u015F emri
