Fix: Correct typo in French email template (#1)
Corrected a typographical error in the French
translation of the email template.  Specifically,
an extra apostrophe was removed from the
`grashTeam` property.

--- a/api/src/main/resources/mailMessages_fr_FR.properties
+++ b/api/src/main/resources/mailMessages_fr_FR.properties
@@ -5,7 +5,7 @@ unsubscribe=Se d\u00E9sinscrire de ces emails ici
 signature=Signature
 happyToWelcome=Nous sommes heureux de vous accueillir. Veuillez d'abord v\u00E9rifier votre compte. Appuyez sur le bouton ci-dessous.
 ifHaveQuestions=Si vous avez des questions, juste r\u00E9pondez \u00E0 ce mail.
-grashTeam=L'\u00E9quipe {0}
+grashTeam=L''\u00E9quipe {0}
 needHelp=Besoin d'aide?
 hereToHelp=Nous sommes l\u00E0 pour vous aider
 verifyAccount=V\u00E9rifier le compte
