Fix: Correct typo in French translation
Corrected a typo in the 'deleted_wo_message'
property file for French locale.

(main)

--- a/api/src/main/resources/mailMessages_fr_FR.properties
+++ b/api/src/main/resources/mailMessages_fr_FR.properties
@@ -74,7 +74,7 @@ approvedRequest=La demande {0} vient d'\u00EAtre approuv\u00E9e
 rejectedRequest=Demande de travail rejet\u00E9e
 rejectedRequestMessage=La demande "{0}" vient d'\u00EAtre rejet\u00E9e
 deleted_wo=Ordre de travail supprim\u00E9
-deleted_wo_message={1} vient de supprimer l'ordre de travail "{0}"
+deleted_wo_message={1} vient de supprimer l''ordre de travail "{0}"
 comingWorkOrderHeader=Bon de travail \u00E0 venir qui vous est assign\u00E9
 coming_wo=Bon de travail \u00E0 venir
 coming_wo_message=Le bon de travail "{0}" qui vous a \u00E9t\u00E9 attribu\u00E9 est \u00E0 venir
